# sound

./: Makefile  TODO  notes  readme
include/: buffer.h  client.h  clientcontrol.h  controller.h  graphics.h  graphicsopengl.h  menu.h  network.h  obj.h  ogg.h  servercontrol.h  soundloader.h  soundloaderogg.h  soundmanager.h  source.h  types.h
res/: addMatch.pl  genplaylist.pl  playlist  playlist2  removeMatch.pl
src/: CMakeLists.txt  buffer.cpp  client.cpp  clientcontrol.cpp  controller.cpp  graphics.cpp  graphicsopengl.cpp  main.cpp  menu.cpp  newmain.cpp  obj.cpp  ogg.cpp  servercontrol.cpp  soundloaderogg.cpp  soundmanager.cpp  source.cpp  test.cpp
src/old/: main.cpp  server.cpp
